# Runebound-Magic--Kubuntu

./: .gitignore  CMakeLists.txt  README.md
assets/images/tiles/: tiles.json
data/: armour_items.json  gear_items.json  inventory_schema.json  tiles.json
dataconnect/: dataconnect.yaml
scripts/: import_inventory.py
src/: firebaseanalytics.cpp  firebaseanalytics.h  firebaseconfig.h  firebasefirestore.cpp  firebasefirestore.h  main.cpp  main.qml
web-app/: package-lock.json  package.json
web-app/src/dataconnect-generated/: index.cjs.js
web-app/src/dataconnect-generated/esm/: index.esm.js
